[package]
name = "needle-cli"
version = "0.9.0"
edition = "2024"
autobins = false
description = "TUI that highlights the GitHub PRs that need you"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cesarferreira/needle"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "src/**",
  "public/**",
]

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
ratatui = "0.29"
crossterm = "0.28"
octocrab = "0.44"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
clap = { version = "4", features = ["derive"] }
